--- a/Deep-Learning-Nanodegree-Foundation/project-4/dlnd_language_translation.ipynb
+++ b/Deep-Learning-Nanodegree-Foundation/project-4/dlnd_language_translation.ipynb
@@ -43,13 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -128,13 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -225,13 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -293,13 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -347,13 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -399,10 +379,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-<<<<<<< HEAD
-=======
     "collapsed": false,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
     "scrolled": false
    },
    "outputs": [
@@ -475,13 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -563,10 +536,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-<<<<<<< HEAD
-=======
     "collapsed": false,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
     "scrolled": true
    },
    "outputs": [
@@ -658,13 +628,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -760,13 +726,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -848,18 +810,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 28,
-=======
-   "execution_count": 4,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-<<<<<<< HEAD
     "epochs = 10\n",
     "# Batch Size\n",
     "batch_size = 1024\n",
@@ -874,22 +831,6 @@
     "learning_rate = 0.001\n",
     "# Dropout Keep Probability\n",
     "keep_probability = 0.5\n",
-=======
-    "epochs = 20\n",
-    "# Batch Size\n",
-    "batch_size = 1024\n",
-    "# RNN Size\n",
-    "rnn_size = 256\n",
-    "# Number of Layers\n",
-    "num_layers = 2\n",
-    "# Embedding Size\n",
-    "encoding_embedding_size = 32\n",
-    "decoding_embedding_size = 32\n",
-    "# Learning Rate\n",
-    "learning_rate = 0.01\n",
-    "# Dropout Keep Probability\n",
-    "keep_probability = 0.75\n",
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
     "display_step = 50"
    ]
   },
@@ -903,11 +844,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 29,
-=======
-   "execution_count": 41,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "metadata": {
     "collapsed": true
    },
@@ -973,11 +910,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 30,
-=======
-   "execution_count": 42,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "metadata": {
     "collapsed": true
    },
@@ -1027,14 +960,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 31,
    "metadata": {
-=======
-   "execution_count": 43,
-   "metadata": {
     "collapsed": false,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
     "scrolled": true
    },
    "outputs": [
@@ -1042,7 +970,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Epoch   0 Batch   50/134 - Train Accuracy: 0.4839, Validation Accuracy: 0.5058, Loss: 1.7848\n",
       "Epoch   0 Batch  100/134 - Train Accuracy: 0.4980, Validation Accuracy: 0.5155, Loss: 1.0651\n",
       "Epoch   1 Batch   50/134 - Train Accuracy: 0.6098, Validation Accuracy: 0.6290, Loss: 0.6745\n",
@@ -1063,48 +990,6 @@
       "Epoch   8 Batch  100/134 - Train Accuracy: 0.9671, Validation Accuracy: 0.9715, Loss: 0.0288\n",
       "Epoch   9 Batch   50/134 - Train Accuracy: 0.9701, Validation Accuracy: 0.9664, Loss: 0.0263\n",
       "Epoch   9 Batch  100/134 - Train Accuracy: 0.9728, Validation Accuracy: 0.9758, Loss: 0.0253\n",
-=======
-      "Epoch   0 Batch   50/134 - Train Accuracy: 0.4543, Validation Accuracy: 0.4824, Loss: 2.2200\n",
-      "Epoch   0 Batch  100/134 - Train Accuracy: 0.4839, Validation Accuracy: 0.5149, Loss: 1.3753\n",
-      "Epoch   1 Batch   50/134 - Train Accuracy: 0.6081, Validation Accuracy: 0.6324, Loss: 0.7043\n",
-      "Epoch   1 Batch  100/134 - Train Accuracy: 0.6359, Validation Accuracy: 0.6499, Loss: 0.5963\n",
-      "Epoch   2 Batch   50/134 - Train Accuracy: 0.7029, Validation Accuracy: 0.7139, Loss: 0.4089\n",
-      "Epoch   2 Batch  100/134 - Train Accuracy: 0.7527, Validation Accuracy: 0.7580, Loss: 0.3322\n",
-      "Epoch   3 Batch   50/134 - Train Accuracy: 0.8340, Validation Accuracy: 0.8366, Loss: 0.2220\n",
-      "Epoch   3 Batch  100/134 - Train Accuracy: 0.8689, Validation Accuracy: 0.8759, Loss: 0.1747\n",
-      "Epoch   4 Batch   50/134 - Train Accuracy: 0.9247, Validation Accuracy: 0.9313, Loss: 0.1122\n",
-      "Epoch   4 Batch  100/134 - Train Accuracy: 0.9270, Validation Accuracy: 0.9331, Loss: 0.0875\n",
-      "Epoch   5 Batch   50/134 - Train Accuracy: 0.9415, Validation Accuracy: 0.9527, Loss: 0.0667\n",
-      "Epoch   5 Batch  100/134 - Train Accuracy: 0.9539, Validation Accuracy: 0.9546, Loss: 0.0547\n",
-      "Epoch   6 Batch   50/134 - Train Accuracy: 0.9562, Validation Accuracy: 0.9661, Loss: 0.0452\n",
-      "Epoch   6 Batch  100/134 - Train Accuracy: 0.9685, Validation Accuracy: 0.9723, Loss: 0.0377\n",
-      "Epoch   7 Batch   50/134 - Train Accuracy: 0.9720, Validation Accuracy: 0.9796, Loss: 0.0333\n",
-      "Epoch   7 Batch  100/134 - Train Accuracy: 0.9757, Validation Accuracy: 0.9785, Loss: 0.0282\n",
-      "Epoch   8 Batch   50/134 - Train Accuracy: 0.9734, Validation Accuracy: 0.9775, Loss: 0.0303\n",
-      "Epoch   8 Batch  100/134 - Train Accuracy: 0.9774, Validation Accuracy: 0.9812, Loss: 0.0278\n",
-      "Epoch   9 Batch   50/134 - Train Accuracy: 0.9741, Validation Accuracy: 0.9809, Loss: 0.0286\n",
-      "Epoch   9 Batch  100/134 - Train Accuracy: 0.9780, Validation Accuracy: 0.9813, Loss: 0.0263\n",
-      "Epoch  10 Batch   50/134 - Train Accuracy: 0.9744, Validation Accuracy: 0.9824, Loss: 0.0296\n",
-      "Epoch  10 Batch  100/134 - Train Accuracy: 0.9789, Validation Accuracy: 0.9810, Loss: 0.0243\n",
-      "Epoch  11 Batch   50/134 - Train Accuracy: 0.9744, Validation Accuracy: 0.9822, Loss: 0.0296\n",
-      "Epoch  11 Batch  100/134 - Train Accuracy: 0.9798, Validation Accuracy: 0.9816, Loss: 0.0263\n",
-      "Epoch  12 Batch   50/134 - Train Accuracy: 0.9746, Validation Accuracy: 0.9824, Loss: 0.0288\n",
-      "Epoch  12 Batch  100/134 - Train Accuracy: 0.9798, Validation Accuracy: 0.9812, Loss: 0.0249\n",
-      "Epoch  13 Batch   50/134 - Train Accuracy: 0.9741, Validation Accuracy: 0.9826, Loss: 0.0288\n",
-      "Epoch  13 Batch  100/134 - Train Accuracy: 0.9801, Validation Accuracy: 0.9819, Loss: 0.0258\n",
-      "Epoch  14 Batch   50/134 - Train Accuracy: 0.9762, Validation Accuracy: 0.9825, Loss: 0.0274\n",
-      "Epoch  14 Batch  100/134 - Train Accuracy: 0.9799, Validation Accuracy: 0.9824, Loss: 0.0248\n",
-      "Epoch  15 Batch   50/134 - Train Accuracy: 0.9762, Validation Accuracy: 0.9825, Loss: 0.0282\n",
-      "Epoch  15 Batch  100/134 - Train Accuracy: 0.9800, Validation Accuracy: 0.9819, Loss: 0.0255\n",
-      "Epoch  16 Batch   50/134 - Train Accuracy: 0.9770, Validation Accuracy: 0.9822, Loss: 0.0263\n",
-      "Epoch  16 Batch  100/134 - Train Accuracy: 0.9811, Validation Accuracy: 0.9821, Loss: 0.0247\n",
-      "Epoch  17 Batch   50/134 - Train Accuracy: 0.9769, Validation Accuracy: 0.9824, Loss: 0.0278\n",
-      "Epoch  17 Batch  100/134 - Train Accuracy: 0.9803, Validation Accuracy: 0.9819, Loss: 0.0239\n",
-      "Epoch  18 Batch   50/134 - Train Accuracy: 0.9778, Validation Accuracy: 0.9826, Loss: 0.0276\n",
-      "Epoch  18 Batch  100/134 - Train Accuracy: 0.9818, Validation Accuracy: 0.9819, Loss: 0.0241\n",
-      "Epoch  19 Batch   50/134 - Train Accuracy: 0.9774, Validation Accuracy: 0.9820, Loss: 0.0257\n",
-      "Epoch  19 Batch  100/134 - Train Accuracy: 0.9811, Validation Accuracy: 0.9822, Loss: 0.0247\n",
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
       "Model Trained and Saved\n"
      ]
     }
@@ -1184,10 +1069,7 @@
     "\n",
     "                print('Epoch {:>3} Batch {:>4}/{} - Train Accuracy: {:>6.4f}, Validation Accuracy: {:>6.4f}, Loss: {:>6.4f}'\n",
     "                      .format(epoch_i, batch_i, len(source_int_text) // batch_size, train_acc, valid_acc, loss))\n",
-<<<<<<< HEAD
     "                '''\n",
-=======
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
     "                if valid_acc >= 0.981 and train_acc >= 0.981:\n",
     "                    learning_rate = 0.00001\n",
     "                elif valid_acc >=0.98:\n",
@@ -1196,11 +1078,7 @@
     "                    learning_rate = 0.001\n",
     "                else:\n",
     "                    pass\n",
-<<<<<<< HEAD
     "                '''\n",
-=======
-    "                \n",
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
     "                    \n",
     "\n",
     "    # Save Model\n",
@@ -1219,11 +1097,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 33,
-=======
-   "execution_count": 44,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "metadata": {
     "collapsed": true
    },
@@ -1245,13 +1119,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 35,
-=======
-   "execution_count": 1,
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1268,10 +1138,11 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1279,30 +1150,30 @@
      "text": [
       "Collecting google-api-python-client\n",
       "  Downloading google_api_python_client-1.6.3-py2.py3-none-any.whl (53kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 61kB 3.0MB/s ta 0:00:011\n",
-      "\u001b[?25hCollecting oauth2client<5.0.0dev,>=1.5.0 (from google-api-python-client)\n",
+      "\u001b[K    100% |████████████████████████████████| 61kB 447kB/s \n",
+      "\u001b[?25hRequirement already satisfied: six<2dev,>=1.6.1 in /Users/jmcdonald/anaconda/envs/dlnd/lib/python3.5/site-packages (from google-api-python-client)\n",
+      "Collecting oauth2client<5.0.0dev,>=1.5.0 (from google-api-python-client)\n",
       "  Downloading oauth2client-4.1.2-py2.py3-none-any.whl (99kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 102kB 4.8MB/s a 0:00:011\n",
+      "\u001b[K    100% |████████████████████████████████| 102kB 1.1MB/s \n",
       "\u001b[?25hCollecting uritemplate<4dev,>=3.0.0 (from google-api-python-client)\n",
       "  Downloading uritemplate-3.0.0-py2.py3-none-any.whl\n",
       "Collecting httplib2<1dev,>=0.9.2 (from google-api-python-client)\n",
       "  Downloading httplib2-0.10.3.tar.gz (204kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 204kB 3.8MB/s ta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: six<2dev,>=1.6.1 in /usr/local/lib/python3.5/site-packages (from google-api-python-client)\n",
-      "Collecting pyasn1>=0.1.7 (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client)\n",
+      "\u001b[K    100% |████████████████████████████████| 204kB 69kB/s \n",
+      "\u001b[?25hCollecting pyasn1>=0.1.7 (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client)\n",
       "  Downloading pyasn1-0.3.4-py2.py3-none-any.whl (63kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 6.3MB/s ta 0:00:011\n",
-      "\u001b[?25hCollecting pyasn1-modules>=0.0.5 (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client)\n",
-      "  Downloading pyasn1_modules-0.1.4-py2.py3-none-any.whl (60kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 61kB 6.3MB/s eta 0:00:01\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 76kB/s \n",
       "\u001b[?25hCollecting rsa>=3.1.4 (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client)\n",
       "  Downloading rsa-3.4.2-py2.py3-none-any.whl (46kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 51kB 6.6MB/s eta 0:00:01\n",
+      "\u001b[K    100% |████████████████████████████████| 51kB 57kB/s \n",
+      "\u001b[?25hCollecting pyasn1-modules>=0.0.5 (from oauth2client<5.0.0dev,>=1.5.0->google-api-python-client)\n",
+      "  Downloading pyasn1_modules-0.1.4-py2.py3-none-any.whl (60kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 61kB 260kB/s \n",
       "\u001b[?25hBuilding wheels for collected packages: httplib2\n",
-      "  Running setup.py bdist_wheel for httplib2 ... \u001b[?25ldone\n",
-      "\u001b[?25h  Stored in directory: /root/.cache/pip/wheels/ca/ac/5f/749651f7925b231103f5316cacca82a487810c22d30f011c0c\n",
+      "  Running setup.py bdist_wheel for httplib2 ... \u001b[?25l-\b \b\\\b \bdone\n",
+      "\u001b[?25h  Stored in directory: /Users/jmcdonald/Library/Caches/pip/wheels/ca/ac/5f/749651f7925b231103f5316cacca82a487810c22d30f011c0c\n",
       "Successfully built httplib2\n",
-      "Installing collected packages: pyasn1, httplib2, pyasn1-modules, rsa, oauth2client, uritemplate, google-api-python-client\n",
+      "Installing collected packages: pyasn1, rsa, pyasn1-modules, httplib2, oauth2client, uritemplate, google-api-python-client\n",
       "Successfully installed google-api-python-client-1.6.3 httplib2-0.10.3 oauth2client-4.1.2 pyasn1-0.3.4 pyasn1-modules-0.1.4 rsa-3.4.2 uritemplate-3.0.0\n"
      ]
     }
@@ -1319,8 +1190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1365,8 +1238,6 @@
    ]
   },
   {
-=======
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1380,15 +1251,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 48,
-   "metadata": {},
-=======
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -1407,11 +1273,7 @@
     "    :return: List of word ids\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-<<<<<<< HEAD
     "    word_ids = [vocab_to_int.get(word, source_vocab_to_int['<UNK>']) for word in sentence.lower().split()]\n",
-=======
-    "    word_ids = [vocab_to_int.get(word, source_vocab_to_int['<UNK>']) for word in sentence.split()]\n",
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
     "    \n",
     "    return word_ids\n",
     "\n",
@@ -1432,15 +1294,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 51,
-   "metadata": {},
-=======
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    "outputs": [
     {
      "name": "stdout",
@@ -1448,7 +1305,6 @@
      "text": [
       "INFO:tensorflow:Restoring parameters from checkpoints/dev\n",
       "Input\n",
-<<<<<<< HEAD
       "  Word Ids:      [218, 52, 166, 74, 163, 21, 125]\n",
       "  English Words: he saw a old yellow truck .\n",
       "\n",
@@ -1459,20 +1315,11 @@
       "Google\n",
       "  French Words: ['il a vu un vieux camion jaune.']\n",
       "  Translated Output: ['it a bright yellow truck. <EOS>']\n"
-=======
-      "  Word Ids:      [111, 74, 172, 40, 148, 213, 206]\n",
-      "  English Words: ['he', 'saw', 'a', 'old', 'yellow', 'truck', '.']\n",
-      "\n",
-      "Prediction\n",
-      "  Word Ids:      [245, 293, 144, 240, 353, 1]\n",
-      "  French Words: il détestait les citrons . <EOS>\n"
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
      ]
     }
    ],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
-    "\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -1498,7 +1345,6 @@
     "\n",
     "print('Input')\n",
     "print('  Word Ids:      {}'.format([i for i in translate_sentence]))\n",
-<<<<<<< HEAD
     "english_words = \" \".join([source_int_to_vocab[i] for i in translate_sentence])\n",
     "print('  English Words: {}'.format(english_words))\n",
     "\n",
@@ -1510,13 +1356,6 @@
     "print('\\nGoogle')\n",
     "print('  French Words: {}'.format(en2fr(english_words)))\n",
     "print('  Translated Output: {}'.format(fr2en(french_words)))"
-=======
-    "print('  English Words: {}'.format([source_int_to_vocab[i] for i in translate_sentence]))\n",
-    "\n",
-    "print('\\nPrediction')\n",
-    "print('  Word Ids:      {}'.format([i for i in translate_logits]))\n",
-    "print('  French Words: {}'.format(\" \".join([target_int_to_vocab[i] for i in translate_logits])))\n"
->>>>>>> dab270a41ec681edbc3b196ecdf33fb6db27137d
    ]
   },
   {
